# breezeml

./: .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_v0.3.0.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.5.md  RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.7.md  RELEASE_NOTES_v0.2.8.md  RELEASE_NOTES_v0.2.9.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v1.0.0.md  iris_model.joblib  mkdocs.yml  paper.bib  paper.md  pyproject.toml  server.json  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
api/: Dockerfile  README.md  app.py  reference.json  requirements.txt
benchmarks/: run_benchmarks.py  validation_results.json  validation_study.py
breezeml/: __init__.py  _fun.py  _guide.py  _meta.py  _narrate.py  _preprocessing.py  _progress.py  _validation.py  active.py  anomaly.py  audit.py  autofeat.py  automl.py  blend.py  breezeml.py  card.py  causal.py  classifiers.py  cli.py  clustering.py  conformal.py  deploy.py  drift.py  explain.py  export.py  fairness.py  features.py  imbalance.py  mcp_server.py  multi.py  plot.py  recommend.py  regressors.py  report.py  semisupervised.py  significance.py  survival.py  text.py  timeseries.py  track.py
docs/: architecture.md  benchmarks.md  case-studies.md  examples.md  good-first-issues.md  index.md  launch-kit.md  stability.md  validation.md
docs/api/: classifiers.md  clustering.md  core.md  explain.md  features.md  plot.md  regressors.md  text.md
docs/guides/: active-learning.md  autofeat.md  automl.md  causal.md  conformal.md  deploy.md  drift.md  export.md  honest-ml.md  mcp.md  model-cards.md  multi-output.md  recommenders.md  significance.md  survival.md  timeseries.md  toolkits.md
examples/: breezeml_quickstart.ipynb  build_kaggle_beginner_notebook.py  build_kaggle_notebook.py  first_ml_model_kaggle.ipynb  honest_ml_titanic_kaggle.ipynb  test_classification.py  test_classifiers.py  test_clustering.py  test_regression.py  test_save_load.py  test_v020_features.py
examples/playground/: build_notebooks.py  dataset-metadata.json  generate_data.py
tests/: test_active.py  test_autofeat.py  test_automl.py  test_boost.py  test_causal.py  test_classifiers.py  test_conformal.py  test_core.py  test_dependency_contract.py  test_deploy.py  test_drift.py  test_features.py  test_fun.py  test_guide.py  test_mcp_server.py  test_model_api.py  test_model_zoo_v14.py  test_multi.py  test_plot.py  test_progress.py  test_recommend.py  test_regressors.py  test_report.py  test_significance.py  test_survival.py  test_timeseries.py  test_v040_features.py  test_v17_honest_ml.py  test_validation.py
