[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "breezeml"
version = "0.3.0"
authors = [
  { name="Akash Anipakalu Giridhar", email="akashagakash@gmail.com" }
]
description = "BreezeML — Production-grade machine learning with zero boilerplate, built on scikit-learn."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "scikit-learn>=1.0",
  "joblib>=1.0"
]
keywords = [
  "machine learning", "scikit-learn", "automl", "classification",
  "regression", "clustering", "beginner", "education", "data science"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mkdocs-material", "mkdocstrings[python]"]
nlp = ["sentence-transformers"]
explain = ["shap", "matplotlib"]
plot = ["matplotlib"]
boost = ["xgboost", "lightgbm"]
datasets = ["seaborn"]
all = ["sentence-transformers", "shap", "matplotlib", "xgboost", "lightgbm", "seaborn"]

[project.urls]
Homepage = "https://github.com/venomez-viper/breezeml"
Repository = "https://github.com/venomez-viper/breezeml"
Issues = "https://github.com/venomez-viper/breezeml/issues"
Documentation = "https://pypi.org/project/breezeml/"

[tool.setuptools.packages.find]
include = ["breezeml*"]
