[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "breezeml"
version = "2.0.0"
authors = [
  { name="Akash Anipakalu Giridhar" }
]
description = "A beginner-friendly, production-aware ML workflow layer for students, analysts, and AI agents: train, compare, explain, export, and deploy scikit-learn models without the boilerplate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "scikit-learn>=1.0",
  "joblib>=1.0"
]
keywords = [
  "machine learning", "scikit-learn", "automl", "classification",
  "regression", "clustering", "beginner", "education", "data science"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mkdocs-material", "mkdocstrings[python]", "fastapi>=0.100", "httpx", "mcp>=1.0; python_version >= '3.10'", "optuna>=3.0", "matplotlib"]
nlp = ["sentence-transformers"]
explain = ["shap", "matplotlib"]
plot = ["matplotlib"]
boost = ["xgboost", "lightgbm"]
datasets = ["seaborn"]
deploy = ["fastapi>=0.100", "uvicorn>=0.23"]
automl = ["optuna>=3.0"]
onnx = ["skl2onnx", "onnx"]
mcp = ["mcp>=1.0"]
all = ["sentence-transformers", "shap", "matplotlib", "xgboost", "lightgbm", "seaborn", "fastapi>=0.100", "uvicorn>=0.23"]

[project.scripts]
breezeml = "breezeml.cli:main"
breezeml-mcp = "breezeml.mcp_server:main"

[project.urls]
Homepage = "https://breezeml.org"
Documentation = "https://breezeml.org"
Repository = "https://github.com/venomez-viper/breezeml"
Issues = "https://github.com/venomez-viper/breezeml/issues"

[tool.setuptools.packages.find]
include = ["breezeml*"]

[tool.setuptools.package-data]
breezeml = ["py.typed"]
